@@ -1,2 +1,4 @@
 2020-05-23
+- Fix compile issue on OpenBSD
+- Fix queue closed test in dequeue
 - Initial Release 1.0
